// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerInput Body Open/Close should open body 1`] = `
<body>
  <div>
    <div
      class="container uui-input-box root uui-picker_toggler uui-size-36 uui-control-mode-form"
    >
      <div
        class="body"
      >
        <input
          aria-haspopup="true"
          autocomplete="no"
          class="uui-input singleInput cursorText"
          dir="ltr"
          placeholder="Please select "
          tabindex="0"
          type="search"
          value=""
        />
      </div>
      <div
        class="uui-picker_toggler-actions"
      >
        <div
          class="container uui-icon uui-enabled uui-icon-dropdown"
        >
          <svg
            class="flipY"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="false"
    class="uui-popper"
    data-placement="top-start"
    role="dialog"
    style="position: fixed; top: -6px; left: 0px; z-index: 2000;"
  >
    <div
      class="uui-dropdown-body -lock-focus root container uui-picker_input-body-wrapper container"
      style="min-width: 360px; max-width: 360px;"
      tabindex="-1"
    >
      <div
        class="root uui-flex-row uui-picker_input-body uui-size-36"
        style="max-height: 300px;"
        tabindex="-1"
      >
        <div
          class="root uui-scroll-bars uui-shadow-top uui-shadow-bottom scrollContainer"
          style="position: relative; overflow: hidden; width: 100%; height: 100%; display: flex;"
        >
          <div
            aria-orientation="vertical"
            style="position: relative; top: 0px; left: 0px; right: 0px; bottom: 0px; overflow: scroll; margin-right: 0px; margin-bottom: 0px; flex: 1 1 auto; display: flex; flex-direction: column;"
            tabindex="-1"
          >
            <div
              class="listContainer"
              style="min-height: 2px;"
            >
              <div
                style="margin-top: 0px;"
              >
                <div
                  aria-posinset="1"
                  aria-selected="false"
                  class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top uui-focus -clickable"
                  role="option"
                >
                  <div
                    class="flexCell rowContent"
                    style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                  >
                    <div
                      class="contentWrapper"
                    >
                      <div
                        class="flexCell root uui-picker_input-item uui-typography"
                        style="min-width: 0; flex-basis: auto;"
                      >
                        <div
                          class="root uui-flex-row columnGap uui-size-36"
                          style="--uui-picker_item-vertical-padding: 9px;"
                        >
                          <div
                            class="flexCell"
                            style="min-width: 0; flex-basis: auto;"
                          >
                            <div
                              class="title uui-size-36"
                            >
                              Elementary
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset="2"
                  aria-selected="false"
                  class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top -clickable"
                  role="option"
                >
                  <div
                    class="flexCell rowContent"
                    style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                  >
                    <div
                      class="contentWrapper"
                    >
                      <div
                        class="flexCell root uui-picker_input-item uui-typography"
                        style="min-width: 0; flex-basis: auto;"
                      >
                        <div
                          class="root uui-flex-row columnGap uui-size-36"
                          style="--uui-picker_item-vertical-padding: 9px;"
                        >
                          <div
                            class="flexCell"
                            style="min-width: 0; flex-basis: auto;"
                          >
                            <div
                              class="title uui-size-36"
                            >
                              Elementary+
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-busy="false"
            aria-label=""
            aria-live="polite"
            class="container uui-blocker-container root"
            role="status"
          />
          <div
            class="uui-track-horizontal"
            style="position: absolute; height: 6px; display: none;"
          >
            <div
              class="uui-thumb-horizontal"
            />
          </div>
          <div
            class="uui-track-vertical"
            style="position: absolute; width: 6px; display: none;"
          >
            <div
              class="uui-thumb-vertical"
            />
          </div>
        </div>
      </div>
      <div
        class="root uui-flex-row uui-picker_input-footer uui-size-36"
      >
        <div
          class="flexSpacer"
        />
        <div
          class="flexCell"
          style="min-width: 0; flex-basis: auto; align-self: center;"
        >
          <button
            aria-disabled="true"
            class="uui-button-box uui-disabled uui-link_button root uui-size-36 uui-no-left-icon uui-no-right-icon uui-color-primary"
            tabindex="-1"
            type="button"
          >
            <div
              class="uui-caption uui-link-button-weight-semibold"
            >
              CLEAR
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PickerInput Rendering should render with maximum props 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box uui-has-value root uui-picker_toggler uui-size-48 uui-control-mode-form"
  >
    <div
      class="body uui-picker_toggler-multiline"
    >
      <span
        class="uui-button-box uui-enabled root uui-size-36 uui-color-neutral uui-fill-solid uui-tag"
        role="option"
        tabindex="-1"
      >
        <div
          class="uui-caption"
        >
          A1
        </div>
        <button
          aria-label="Remove tag"
          class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root uui-icon-cancel"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </span>
      <span
        class="uui-button-box uui-enabled root uui-size-36 uui-color-neutral uui-fill-solid uui-tag"
        role="option"
        tabindex="-1"
      >
        <div
          class="uui-caption"
        >
          A1+
        </div>
        <button
          aria-label="Remove tag"
          class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root uui-icon-cancel"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </span>
      <input
        aria-haspopup="true"
        autocomplete="no"
        class="uui-input"
        dir="ltr"
        placeholder="Test placeholder"
        readonly=""
        tabindex="0"
        type="search"
        value=""
      />
    </div>
    <div
      class="uui-picker_toggler-actions"
    >
      <button
        aria-label="Clear input"
        class="uui-button-box uui-enabled -clickable container uui-icon-cancel"
        tabindex="0"
        type="button"
      >
        <div
          class="container uui-icon uui-enabled"
        >
          <svg
            class=""
          />
        </div>
      </button>
      <div
        class="container uui-icon uui-enabled uui-icon-dropdown"
      >
        <svg
          class=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PickerInput Rendering should render with minimum props 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box root uui-picker_toggler uui-size-36 uui-control-mode-form"
  >
    <div
      class="body"
    >
      <input
        aria-haspopup="true"
        autocomplete="no"
        class="uui-input singleInput cursorText"
        dir="ltr"
        placeholder="Please select "
        tabindex="0"
        type="search"
        value=""
      />
    </div>
    <div
      class="uui-picker_toggler-actions"
    >
      <div
        class="container uui-icon uui-enabled uui-icon-dropdown"
      >
        <svg
          class=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
